--- a/Stronka.html
+++ b/Stronka.html
@@ -11,6 +11,7 @@
     <h2>
         <center>Myślałem, że każde kolejne "h" będzie wieksze...
     </h2>
+    <h3> Każde kolejne h jest mniejsze</h3>
     </center>
     <p>
         <center>Tak wyglądają podstawy HTMLa..</center>
